<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/mainLayout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <include
        layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/TextInputTheme">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_corner_input_area"
                android:ellipsize="end"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:textColor="@color/app_text_color_gray"
                android:textSize="@dimen/text_size_small"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/TextInputTheme">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_corner_input_area"
                android:ellipsize="end"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:scrollHorizontally="true"
                android:textColor="@color/app_text_color_gray"
                android:textSize="@dimen/text_size_small"
                />
        </android.support.design.widget.TextInputLayout>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/signup_or_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            app:pb_colorComplete="@color/app_apple_green"
            app:pb_colorError="@color/app_apple_green"
            app:pb_colorNormal="@color/app_apple_green"
            app:pb_colorPressed="@color/app_apple_green"
            app:pb_colorProgress="@color/app_apple_green"
            app:pb_textComplete="@string/success"
            app:pb_textError="@string/signup_or_login"
            app:pb_textProgress="@string/signing_you_in"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/disclaimer"
            android:textColor="@color/app_text_color_gray"
            android:textSize="@dimen/text_size_small"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>