<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:id="@+id/mainLayout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <include
        layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="?android:attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/inputAreaLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/rounded_corner_enabled_button"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@id/btnSend"
                android:background="@drawable/rounded_corner_input_area"
                android:ellipsize="end"
                android:hint="@string/start_a_new_message"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/app_text_color_gray"
                android:textSize="@dimen/text_size_small"
                />
        </RelativeLayout>

        <View
            android:id="@+id/bottomBorder"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/inputAreaLayout"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/border_color"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBorder"
            android:paddingLeft="@dimen/message_horizontal_padding"
            android:paddingRight="@dimen/message_horizontal_padding"/>

        <TextView
            android:id="@+id/tvLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            android:textSize="@dimen/text_size_small"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>